--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "phpmysql/phpmysql",
     "description": "php mysql libraries",
-    "type": "library",
+    "type": "phpmysql-installer",
     "license": "MIT",
     "authors": [
         {
@@ -12,7 +12,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.6.4",
-        "ext-mbstring": "*"
+        "ext-mbstring": "*",
+        "phpmysql/installer": "*"
     },
     "autoload": {
         "psr-4": {
