--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=5.6.4",
         "ext-mbstring": "*",
-        "phpmysql/installer": "0.1.7"
+        "phpmysql/installer": "^0.1"
     },
     "autoload": {
         "psr-4": {
